# ndarray

./: CMakeLists.txt  README.rst  TODO.rst  conanfile.txt
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_ndarray.cpp  benchmark_ndarray_operator.cpp  benchmark_ndcontainer.cpp  benchmark_ndfunc.cpp  benchmark_nditer.cpp  benchmark_ndlinalg.cpp  benchmark_ndutil.cpp  benchmark_type.hpp
cmake/: FFTW3Config.cmake  MKLConfig.cmake
doc/: conf.py  index.rst
doc/general/: index.rst  install.rst  known_issues.rst
doc/notes/: index.rst
ndarray/: CMakeLists.txt  _ndarray.cpp  _ndarray.hpp  _ndcontainer.hpp  _ndforward.hpp  _ndfunc.cpp  _ndfunc.hpp  _nditer.hpp  _ndlinalg.hpp  _ndtype.hpp  _ndutil.cpp  _ndutil.hpp  _ndvector.hpp  ndarray.hpp
src/: CMakeLists.txt  _ndarray.cpp  _ndarray.hpp  _ndcontainer.cpp  _ndfunc.cpp  _ndfunc.hpp  _nditer.cpp  _nditer.hpp  _ndlinalg.cpp  ndarray.hpp
statistics/: bench.json  bench_advance_base.json  bench_iter.json
test/: CMakeLists.txt  ndarray  playground.cpp  test.cpp  test_ndarray.cpp  test_ndarray_constructor.cpp  test_ndarray_index.cpp  test_ndarray_iterator.cpp  test_ndarray_linalg.cpp  test_ndarray_manipulation.cpp  test_ndarray_operator.cpp  test_ndarray_property.cpp  test_ndarray_util.cpp  test_ndcontainer.cpp  test_ndfunc.cpp  test_nditer.cpp  test_ndlinalg.cpp  test_ndutil.cpp  test_ndvector.cpp  test_type.hpp
